adicionado imagens de promoçao

--- a/index.html
+++ b/index.html
@@ -27,6 +27,57 @@
             <button>Saiba mais</button>
         </div>
     </header>
+    <section id="pacotes" class= "pacotes">
+        <h1 class=" pacotes title">Conheça nossos pacotes </h1> 
+        
+        <div class="pacotes-card">
+            <div class=" card">
+                <div class="card-tag car-tag-top">
+                    <p>Promoção</p>
+                </div>
+                <div class="card-tag card-tag-bottom">
+                    <p>R$1.500,00</p>
+                </div>
+                <img src="https://th.bing.com/th/id/R.a00e1727cb31a2978064b38c02ea772f?rik=udS%2bRQESZ4dxSg&riu=http%3a%2f%2fwww.amandaviaja.com.br%2fwp-content%2fuploads%2f2016%2f02%2f20151201259558038-1024x576.jpg&ehk=VcMj1NcK1wq6rlFsXinjb3p7df97zch4VPfm2tm6jMA%3d&risl=&pid=ImgRaw&r=0" alt="elefante" class="card-image">
+                <div class="card-content">
+                    <h1>Passeio de Elefante</h1>
+                    <ul>
+                        <li><i></i>Alegria</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=" card">
+                <div class="card-tag car-tag-top">
+                    <p>Promoção</p>
+                </div>
+                <div class="card-tag card-tag-bottom">
+                    <p>R$1.500,00</p>
+                </div>
+                <img src="https://th.bing.com/th/id/R.a00e1727cb31a2978064b38c02ea772f?rik=udS%2bRQESZ4dxSg&riu=http%3a%2f%2fwww.amandaviaja.com.br%2fwp-content%2fuploads%2f2016%2f02%2f20151201259558038-1024x576.jpg&ehk=VcMj1NcK1wq6rlFsXinjb3p7df97zch4VPfm2tm6jMA%3d&risl=&pid=ImgRaw&r=0" alt="elefante" class="card-image">
+                <div class="card-content">
+                    <h1>Passeio de Elefante</h1>
+                    <ul>
+                        <li><i></i>Alegria</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=" card">
+                <div class="card-tag car-tag-top">
+                    <p>Promoção</p>
+                </div>
+                <div class="card-tag card-tag-bottom">
+                    <p>R$1.500,00</p>
+                </div>
+                <img src="https://th.bing.com/th/id/R.a00e1727cb31a2978064b38c02ea772f?rik=udS%2bRQESZ4dxSg&riu=http%3a%2f%2fwww.amandaviaja.com.br%2fwp-content%2fuploads%2f2016%2f02%2f20151201259558038-1024x576.jpg&ehk=VcMj1NcK1wq6rlFsXinjb3p7df97zch4VPfm2tm6jMA%3d&risl=&pid=ImgRaw&r=0" alt="elefante" class="card-image">
+                <div class="card-content">
+                    <h1>Passeio de Elefante</h1>
+                    <ul>
+                        <li><i></i>Alegria</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>     
 </html>
