adicionado tema para trabalho

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             </div>
         </div>
     </section>
-    <section id="Servicos" class="servicos">
-        <h1 class="servicos-title">Servicos</h1>
+    <section id="servicos" class="servicos">
+        <h1 class="servicos-title">Serviços</h1>
         <div class="servicos-cards">
             <div class="card">
                 <i data-feather="map"></i>
@@ -95,8 +95,44 @@
                     <h3>tours guiados</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos voluptatum, nam, sequi eius quidem minus dolores vero vel consequuntur deserunt ipsam deleniti repellendus nemo totam quasi facere quibusdam minima dolorum.</p>
                 </div>
-            <button>Saiba Mais</button>
+                <button>Saiba Mais</button>
+                <i data-feather="map"></i>
+                <div class="card-content">
+                    <h3>aluguel de veiculos</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos voluptatum, nam, sequi eius quidem minus dolores vero vel consequuntur deserunt ipsam deleniti repellendus nemo totam quasi facere quibusdam minima dolorum.</p>
+                </div>
+                <button>Saiba Mais</button>
+                <i data-feather="camera"></i>
+                <div class="card-content">
+                    <h3>fotografia profissional</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos voluptatum, nam, sequi eius quidem minus dolores vero vel consequuntur deserunt ipsam deleniti repellendus nemo totam quasi facere quibusdam minima dolorum.</p>
+                </div>
+                <button>Saiba Mais</button>
+            </div>
+        </div>
+        <div class="contatos">
+            <p>&reg;</p>
+        </div>
             
+            <h2>João Victor Schmidt Leite</h2>
+            <div class="contatos-svg">
+                <div class="mail">
+                    <i data-feather="mail"></i> joao.schmidt556@gmail.com
+                </div>
+                <div class="facebook">
+                    <i data-feather="facebook"></i> João Victor Schmidt
+                </div>
+                <div class="twitter">
+                    <i data-feather="twitter"></i>  Chaulim Matador de Porco
+                </div>
+                <div class="smartphone">
+                    <i data-feather="smartphone"></i> (45) 99963-5411
+                </div>
+                <div class="deselvolvido">
+                    <p>Desenvolvido por João Victor Schmidt Leite</p>
+                </div>
+            </div>
+
         </div>
     </section>
     <script>
