--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <button>Saiba mais</button>
         </div>
     </header>
-    <section id="pacotes" class= "pacotes">
-        <h1 class="pacotes title">Conheça nossos pacotes </h1> 
+    <section id="pacotes" class="pacotes">
+        <h1 class="pacotes-title">Conheça nossos pacotes </h1> 
         
         <div class="pacotes-card">
-            <div class=" card">
+            <div class="card">
                 <div class="card-tag card-tag-top">
                     <p>Promoção</p>
                 </div>
@@ -50,7 +50,7 @@
                     </ul>
                 </div>
             </div>
-            <div class=" card">
+            <div class="card">
                 <div class="card-tag card-tag-top">
                     <p>Promoção</p>
                 </div>
